{
  "autonomy": "AUTONOMY",
  "your_recovery_phrase":"Your recovery phrase",
  "yrp_we’ve_safely": "We’ve safely and securely backed up your recovery phrase to your",
  "icloud_keychain": " iCloud Keychain",
  "yrp_you_may_also": ". You may also back it up to use it in another BIP-39 standard wallet:",
  "access_method": "Access method",
  "link": "Link",
  "li_view_your_nfts": "View your NFTs without Autonomy accessing your private keys in {}.",
  "li_autonomy_currently_only": "Autonomy currently only links to wallets on the Ethereum Mainnet. Other networks like Polygon are not yet supported.",
  "import": "Import",
  "im_view_and_control": "View and control your NFTs, sign authorizations, and connect to other platforms with Autonomy.",
  "accounts": "Accounts",
  "link_another_account": "LINK ANOTHER ACCOUNT",
  "done": "DONE",
  "set_up_account": "Set up account",
  "debug_address": "Debug address",
  "da_manually_input_an": "Manually input an address for debugging purposes.",
  "show_token_debug_log": "Show Token Debug log",
  "debug_indexer_tokenId": "Debug Indexer TokenID",
  "dit_manually_input_an": "Manually input an indexer tokenID for debugging purposes",
  "delete_all_debug_li": "Delete All Debug Linked IndexerTokenIDs",
  "add": "Add",
  "ad_i_already_have": "I already have NFTs in other wallets that I want to view with Autonomy.",
  "new": "New",
  "ne_make_a_new_account": "Make a new account with addresses you can use to collect or receive NFTs on Ethereum, Feral File, and Tezos. ",
  "import_account": "Import account",
  "ia_importing_your_account": "Importing your account will also add support for all chains featured in Autonomy. We will automatically back up your account in your iCloud Keychain.",
...
  "ba_the_keys_for_thisFf": "The keys for this account are either automatically backed up by Feral File or managed by your web3 wallet (if you connected one).",
  "ba_the_keys_for_this": "The keys for this account are in {} You should manage your key backups there.",
  "account_alias": "Account alias",
  "aa_you_can_add": "You can add an optional alias for this account to help you recognize it. This alias will only be visible to you in Autonomy.",
  "enter_alias": "Enter alias",
  "save_alias": "SAVE ALIAS",
  "skip":"SKIP",
  "do_you_have_nfts": "Do you have NFTs you want to view with Autonomy",
  "yes": "Yes",
  "no": "No",
  "addresses": "Addresses",
  "recovery_phrase": "Recovery phrase",
  "authen_for_autonomy": "Authentication for \"Autonomy\"",
  "backed_up": "Backed up",
  "enable_backup_encryption": "Enable backup encryption ",
  "google_cld_bk_unavailable": "Google cloud backup unavailable",
...
  "nft_or_eth": "ETHEREUM NFT or ETH",
  "nft_or_xtz": "TEZOS NFT or XTZ",
  "bitmark_send_only": "Send only Bitmark NFTs to this address. Do not send cryptocurrencies. Sending cryptocurrencies or non-Bitmark NFTs may result in their permanent loss.",
  "eth_send_only":"Send only Ether (ETH) cryptocurrency and Ethereum NFTs to this address. Do not send anything from an alternate chain such as USD Tether or Binance Smart Chain. Sending non-Ethereum cryptocurrencies or tokens may result in their permanent loss.",
  "xtz_send_only":"Send only Tezos (XTZ) cryptocurrency and Tezos NFTs (FA2 standard) to this address. Sending other cryptocurrencies or tokens may result in their permanent loss.",
  "select_address": "Select an address on the appropriate blockchain where you want to receive your NFT or cryptocurrency:",
  "collection": "Collection",
  "collection_empty_now": "Your collection is empty for now.",
  "conflict_detected": "Conflict detected",
  "conflict_keychains": "We have detected a conflict of keychains.",
  "this_might_occur": "This might occur if you have signed in to a different cloud on this device. You are required to define a default keychain for identification before continuing with other actions inside the app:",
  "device_keychain": "Device keychain",
  "cloud_keychain": "Cloud keychain",
...
  "send_eth": "Send ETH",
  "send_xtz": "Send XTZ",
  "to": "To",
  "paste_or_scan_address": "Paste or scan address",
  "send": "Send",
  "review": "Review",
  "max": "Max: ",
  "gas_fee": "Gas fee: ",
  "title": "Title",
  "artist": "Artist",
  "edition": "Edition",
  "confirmation": "Confirmation",
  "gas_fee2": "Gas fee",
  "receive_eth": "Receive ETH",
  "receive_xtz": "Receive XTZ",
  "deposit_address": "Deposit address",
  "sendH": "SEND",
  "total_amount": "Total Amount",
  "action_irrevocable": "This action is irrevocable.",
  "accounts_delete": " Your accounts and data from your device and your cloud backup will be deleted. Autonomy will not be able to help you recover access.",
  "this_not_effect": "This will not affect private keys of linked accounts",
  "active_subscription": "If you have an active subscription, you will need to manually cancel it in your device’s settings.",
  "i_understand": "I understand that this action cannot be undone.",
...
  "view_collection_tv": "View your collection on TV and projectors.",
  "priority_support": "Priority support.",
  "error_loading_sub": "Error when loading your subscription.",
  "upgrading_gives_you": "Upgrading gives you:",
  "gg_tv_app": "*Google TV app plus AirPlay & Chromecast streaming",
  "sub_then_price": "SUBSCRIBE FOR A 30-DAY FREE TRIAL\n(THEN {}/MONTH)",
  "not_now": "NOT NOW",
  "plus_account": "+ Account",
  "select_network": "Select network",
  "help_us_improve": "Help us improve",
  "p_bug_bounty": "Participate in bug bounty",
  "p_user_test": "Participate in a user test",
  "data_management": "Data management",
...
  "marketplace": "marketplace: ",
  "other": "Other",
  "thank_you": "Thank you!",
  "entered_drawing": "You’ve been automatically entered in this month’s drawing to win a Feral File artwork. If you win, we’ll transfer the NFT to your Autonomy account and notify you.",
  "h_confirm": "Confirm",
  "asset": "Asset",
  "tezos_xtz": "Tezos (XTZ)",
  "from": "From",
  "connection": "Connection",
  "operation_failed":"Operation failed",
  "message": "Message",
  "sign": "Sign",
  "ethereum_eth": "Ethereum (ETH)",
...
  "esti_floor": "Estimated value\n(floor price)",
  "change_usd": "Change ($)",
  "roi": "Return on investment (ROI)",
  "eula": "EULA",
  "_and": " and ",
  "privacy_policy": "Privacy Policy",
  "settings": "Settings",
  "forget_exit": "Forget I exit",
  "call": "Call",
  "status": "Status",
  "date":"Date",
  "amount": "Amount",
  "sc_interaction": "Smart contract interaction",
...
