...
            ),
            Row(
              children: [
                Expanded(
                  child: AuFilledButton(
                    enabled: _isSubmissionEnabled,
                    text: _isProcessing ? "RESTORING..." : "RESTORE",
                    isProcessing: _isProcessing,
                    onPress: () {
                      if (_isSubmissionEnabled) _submitRestore();
                    },
                  ),
                ),
...
