...
      case "nameAlias":
        if (isAvailable) {
          return Row(
            children: [
              Expanded(
                child: AuFilledButton(
                  text: "CONTINUE".toUpperCase(),
                  onPress: () => _continue(context),
                ),
              ),
            ],
          );
        } else {
...
