...
              ),
            ),
            Row(
              children: [
                Expanded(
                  child: AuFilledButton(
                    text: "LINK".toUpperCase(),
                    onPress: () => _linkManuallyAddress(),
                  ),
                ),
              ],
            ),
          ],
...
