...
                          size: 32,
                        ),
                      ),
                      IconButton(
                        onPressed: () => Navigator.of(context).pop(),
                        icon: closeIcon(color: theme.colorScheme.secondary),
                        tooltip: 'CloseArtwork',
                      )
                    ],
                  ),
                ),
              ),
              Expanded(
...
